# auto-codex

./: IMPLEMENTATION_DESIGN.md  IMPLEMENTATION_DESIGN_OPTIMIZED.md  README.md  TODO.md  codexflow_design_spec.md  codexflow_review_feedback.md  pyproject.toml
codexflow/: __init__.py  artifacts.py  cli.py  codex_runner.py  command.py  commit_builder.py  config.py  context.py  db.py  doctor.py  github.py  gitlab.py  gitops.py  issue_provider.py  locks.py  models.py  pipeline.py  prompts.py  report.py  review.py  secret_filter.py  test_runner.py
codexflow/prompt_templates/: dev_design.md  dev_design_fix.md  dev_fix.md  dev_implement.md  review_code.md  review_design.md
codexflow/schemas/: commit_summary.schema.json  design.schema.json  review.schema.json
examples/: AGENTS.md  codexflow_gitlab.yaml  codexflow_task.md  feedback_template.md  review_evaluation_template.md
tests/: helpers.py  integration_support.py  test_cli.py  test_codex_runner.py  test_command.py  test_commit_builder.py  test_config.py  test_context.py  test_github.py  test_gitlab.py  test_gitops.py  test_integration_golden_path.py  test_issue_provider.py  test_locks.py  test_pipeline.py  test_prompts.py  test_real_codex_boundary.py  test_real_github_boundary.py  test_resume.py  test_review.py  test_schemas.py  test_secret_filter.py  test_store_artifacts.py  test_test_runner.py
