[project]
name = "auto-codex"
version = "0.1.0"
description = "Local-first Codex CLI orchestration for issue-driven development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
codexflow = "codexflow.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codexflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
